# esp-6ch-sensor

./: README.md  partitions.csv  sdkconfig.defaults
default_files/: index.html
esp/: CMakeLists.txt
esp/main/: CMakeLists.txt  button_manager.c  button_manager.h  config.h  fatfs_manager.c  index.html  lcd.c  lcd.h  main.c  ntc_adc.c  ntc_adc.h  nvs_manager.c  nvs_manager.h  server.c  server.h  state_manager.c  state_manager.h  status_led.c  wifi_manager.c  wifi_manager.h
esp/partition_table/: partitionTable.csv
frontend/: .gitignore
frontend/app/: package-lock.json  package.json  vite.config.js
frontend/app/src/: main.jsx
frontend/app/src/components/: App.jsx  Layout.jsx  Navbar.css  Navbar.jsx  Sidebar.jsx  svgs.jsx
frontend/app/src/store/: appSlice.js  index.js
frontend/settings/: index.html  package-lock.json  vite.config.js
main/: CMakeLists.txt  Kconfig.projbuild  button_manager.c  config.h  config.ini.default  fatfs_manager.h  lcd.c  lcd.h  main.c  ntc_adc.c  ntc_adc.h  prototype_functions.c  server.c  state_manager.c  state_manager.h  status_led.c  status_led.h  wifi_manager.c  wifi_manager.h
sta-settings/: .gitignore  build.js  package-lock.json  package.json
sta-settings/src/: index.html  main.js  style.css
